crates/products/agent-tools/tools/src/api/gitlab/tests/snapshots/wt_tools__api__gitlab__tests__cli_snapshots__comment_mr.snap
---
source: crates/products/agent-tools/tools/src/api/gitlab/tests/cli_snapshots.rs
expression: "serde_json::to_string_pretty(&message).unwrap()"
---
{
  "data": {
    "author": "agent",
    "body": "**Comment from a WT world agent**\n\nReady for another look.",
    "created_at": "2026-08-23T10:00:00Z",
    "handle": "125",
    "updated_at": "2026-08-23T10:00:00Z",
    "url": "https://gitlab.test/acme/widget/-/merge_requests/8#note_125"
  },
  "type": "general_comment"
}
