crates/products/agent-tools/tools/src/api/gitlab/tests/snapshots/wt_tools__api__gitlab__tests__cli_snapshots__list_ci.snap
---
source: crates/products/agent-tools/tools/src/api/gitlab/tests/cli_snapshots.rs
expression: "serde_json::to_string_pretty(&message).unwrap()"
---
{
  "data": {
    "jobs": [
      {
        "handle": "45",
        "name": "test",
        "run": "92",
        "state": "success",
        "url": "https://gitlab.test/jobs/45"
      }
    ],
    "runs": [
      {
        "branch": "wt/fix-login",
        "handle": "92",
        "head": "abc123",
        "name": "pipeline",
        "state": "success",
        "trigger": "merge_request_event",
        "url": "https://gitlab.test/pipelines/92"
      }
    ]
  },
  "type": "ci_runs_and_jobs"
}
